objects/AW_FNAInvestment__c.object
<CustomObject>
    <fields>
        <fullName>AW_Description__c</fullName>
        <description>Enter the Investment Description</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_FNA__c</fullName>
        <description>The related FNA</description>
        <label>FNA</label>
        <referenceTo>AW_FNA__c</referenceTo>
        <relationshipLabel>FNA Investments</relationshipLabel>
        <relationshipName>FNA_Investments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AW_InitialInvestment__c</fullName>
        <description>Initial Investment Amount</description>
        <label>Initial Investment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_LastUpdatedDatefromSource__c</fullName>
        <description>Date and Time of last update</description>
        <label>Last Updated Date On Source</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_LumpSumFV__c</fullName>
        <description>The Lump Sum amount of Future Value</description>
        <label>Lump Sum FV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_LumpSumPV__c</fullName>
        <description>The Lump Sum amount of Present Value</description>
        <label>Lump Sum PV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_MonthlyPremium__c</fullName>
        <description>The amount of Monthly Premium</description>
        <label>Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Source_System_Name__c</fullName>
        <description>Select Source System Name</description>
        <label>Source System Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>atWork</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Avalon</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>BPNB</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>SFDC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_TF_Source_System_ID__c</fullName>
        <description>External Source ID (TF)</description>
        <externalId>true</externalId>
        <label>Source System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_TermType__c</fullName>
        <description>Select The Term Type</description>
        <label>Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                    <isActive>false</isActive>
                    <label>Years</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Term__c</fullName>
        <description>The term of investment</description>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_UpdatedByMulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if updated by MuleSoft</description>
        <label>Updated by MuleSoft</label>
        <type>Checkbox</type>
    </fields>
    <label>FNA Investment</label>
    <nameField>
        <label>FNA Investment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FNA Investments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>